--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,7 +14,11 @@
         <action
             android:id="@+id/action_AnamnesisFragment_to_InfoFragment"
             app:destination="@id/InfoFragment" />
+        <action
+            android:id="@+id/action_AnamnesisFragment_to_PhysicalExamFragment"
+            app:destination="@id/PhysicalExamFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/InfoFragment"
         android:name="com.example.raciociniobruto.InfoFragment"
@@ -26,5 +30,21 @@
             app:destination="@id/AnamnesisFragment"
             app:popUpTo="@id/AnamnesisFragment"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_InfoFragment_to_PhysicalExamFragment"
+            app:destination="@id/PhysicalExamFragment"
+            app:popUpTo="@id/PhysicalExamFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/PhysicalExamFragment"
+        android:name="com.example.raciociniobruto.PhysicalExamFragment"
+        android:label="fragment_physical_exam"
+        tools:layout="@layout/fragment_physical_exam" >
+
+        <action
+            android:id="@+id/action_PhysicalExamFragment_to_InfoFragment"
+            app:destination="@id/InfoFragment" />
     </fragment>
 </navigation>
