--- a/app/src/main/res/layout/fragment_complementary_exams.xml
+++ b/app/src/main/res/layout/fragment_complementary_exams.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhysicalExamFragment">
+    tools:context=".ComplementaryExamsFragment">
 
     <TextView
-        android:id="@+id/txt_physicalExam_content"
+        android:id="@+id/txt_complementaryExams_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -15,14 +15,14 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/physicalExam_content"
+        android:text="@string/complementaryExams_content"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_physicalExam_title" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_complementaryExams_title" />
 
     <Button
-        android:id="@+id/button_physicalExam_next"
+        android:id="@+id/button_complementaryExams_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -32,11 +32,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
-        app:layout_constraintStart_toEndOf="@+id/button_physicalExam_diagnostic"
-        app:layout_constraintTop_toTopOf="@+id/button_physicalExam_diagnostic" />
+        app:layout_constraintStart_toEndOf="@+id/button_complementaryExams_diagnostic"
+        app:layout_constraintTop_toTopOf="@+id/button_complementaryExams_diagnostic" />
 
     <Button
-        android:id="@+id/button_physicalExam_info"
+        android:id="@+id/button_complementaryExams_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -44,12 +44,12 @@
         android:layout_marginBottom="16dp"
         android:text="@string/info"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_physicalExam_diagnostic"
+        app:layout_constraintEnd_toStartOf="@+id/button_complementaryExams_diagnostic"
         app:layout_constraintHorizontal_bias="0.568"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button_physicalExam_diagnostic"
+        android:id="@+id/button_complementaryExams_diagnostic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -60,13 +60,13 @@
         android:layout_marginBottom="16dp"
         android:text="@string/diagnosticar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_physicalExam_next"
-        app:layout_constraintStart_toEndOf="@+id/button_physicalExam_info"
-        app:layout_constraintTop_toBottomOf="@+id/txt_physicalExam_content"
+        app:layout_constraintEnd_toStartOf="@+id/button_complementaryExams_next"
+        app:layout_constraintStart_toEndOf="@+id/button_complementaryExams_info"
+        app:layout_constraintTop_toBottomOf="@+id/txt_complementaryExams_content"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-        android:id="@+id/txt_physicalExam_title"
+        android:id="@+id/txt_complementaryExams_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
