--- a/app/src/main/res/layout/anamnesis_fragment.xml
+++ b/app/src/main/res/layout/anamnesis_fragment.xml
@@ -6,20 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".AnamnesisFragment">
 
-    <TextView
-        android:id="@+id/txt_anamnesis_content"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/anamnesis_content"
-        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_diagnostic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_anamnesis_title" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_anamnesis_title">
+
+            <TextView
+                android:id="@+id/txt_anamnesis_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:text="@string/anamnesis_content"
+                android:textSize="18sp" />
+    </ScrollView>
 
     <Button
         android:id="@+id/button_next"
