--- a/app/src/main/res/layout/fragment_physical_exam.xml
+++ b/app/src/main/res/layout/fragment_physical_exam.xml
@@ -20,17 +20,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_physicalExam_title">
 
-        <TextView
-            android:id="@+id/txt_physicalExam_content"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:text="@string/physicalExam_content"
-            android:textSize="18sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txt_physicalExam_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:text="@string/physicalExam_content"
+                android:textSize="18sp" />
+        </LinearLayout>
     </ScrollView>
 
     <Button
