--- a/app/src/main/res/layout/stage_item.xml
+++ b/app/src/main/res/layout/stage_item.xml
@@ -28,7 +28,7 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-       <!-- <TextView
+       <TextView
             android:id="@+id/txt_stage_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,7 +40,16 @@
             android:clickable="false"
             android:text="@string/stage_item"
             android:textColor="@color/white"
-            android:textSize="16sp" />-->
+            android:textSize="16sp"
+            android:visibility="visible"/>
+
+      <ImageView
+            android:id="@+id/img_stage_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="false"
+            android:adjustViewBounds="true"
+            android:visibility="gone"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
