Usa PhotoView para possibilitar zoom nas imagens

--- a/app/src/main/res/layout/stage_item.xml
+++ b/app/src/main/res/layout/stage_item.xml
@@ -43,7 +43,7 @@
             android:textSize="16sp"
             android:visibility="visible"/>
 
-      <ImageView
+       <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/img_stage_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
